crates/vite_task_bin/tests/snapshots/snapshots__query - user task cache key@cache-keys.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: "&plan_json"
input_file: crates/vite_task_bin/tests/fixtures/cache-keys
---
{
  "root_node": {
    "Expanded": [
      {
        "key": [
          "<workspace>/",
          "hello"
        ],
        "node": {
          "task_display": {
            "package_name": "",
            "task_name": "hello",
            "package_path": "<workspace>/"
          },
          "items": [
            {
              "command_span": {
                "start": 0,
                "end": 18
              },
              "extra_args": [],
              "plan_cwd": "<workspace>/",
              "kind": {
                "Leaf": {
                  "Spawn": {
                    "cache_metadata": {
                      "spawn_fingerprint": {
                        "cwd": "",
                        "program_fingerprint": {
                          "OutsideWorkspace": {
                            "program_name": "readfile"
                          }
                        },
                        "args": [
                          "hello.txt"
                        ],
                        "env_fingerprints": {
                          "fingerprinted_envs": {},
                          "pass_through_env_config": [
                            "<default pass-through envs>"
                          ]
                        },
                        "fingerprint_ignores": null
                      },
                      "execution_cache_key": {
                        "kind": {
                          "UserTask": {
                            "task_name": "hello",
                            "and_item_index": 0
                          }
                        },
                        "origin_path": ""
                      }
                    },
                    "spawn_command": {
                      "program_path": "<manifest_dir>/test_bins/node_modules/.bin/readfile",
                      "args": [
                        "hello.txt"
                      ],
                      "all_envs": {
                        "FORCE_COLOR": "3",
                        "PATH": "<workspace>/node_modules/.bin:<manifest_dir>/test_bins/node_modules/.bin"
                      },
                      "cwd": "<workspace>/"
                    }
                  }
                }
              }
            }
          ]
        },
        "neighbors": []
      }
    ]
  }
}
