crates/vite_task_bin/tests/snapshots/snapshots__task graph@cache-keys.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: task_graph_json
input_file: crates/vite_task_bin/tests/fixtures/cache-keys
---
[
  {
    "key": [
      "<workspace>/",
      "hello"
    ],
    "node": {
      "task_display": {
        "package_name": "",
        "task_name": "hello",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "readfile hello.txt",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  }
]
