crates/vite_task_bin/tests/snapshots/snapshots__task graph@cache-sharing.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: task_graph_json
input_file: crates/vite_task_bin/tests/fixtures/cache-sharing
---
[
  {
    "key": [
      "<workspace>/",
      "a"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-sharing",
        "task_name": "a",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo a",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "b"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-sharing",
        "task_name": "b",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo a && echo b",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "c"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-sharing",
        "task_name": "c",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo a && echo b && echo c",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "pass_through_envs": [
                "<default pass-through envs>"
              ]
            }
          }
        }
      }
    },
    "neighbors": []
  }
]
