crates/vite_task_bin/tests/snapshots/snapshots__task graph@dependency-both-topo-and-explicit.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: "vite_graph_ser::SerializeByKey(indexed_task_graph.task_graph())"
input_file: crates/vite_task_bin/tests/fixtures/dependency-both-topo-and-explicit
---
{
  ("<redacted>/packages/a", "build"): DiGraphValue(
    node: TaskNode(
      task_display: TaskDisplay(
        package_name: "@test/a",
        task_name: "build",
        package_path: "<redacted>/packages/a",
      ),
      resolved_config: ResolvedTaskConfig(
        command: "build a",
        resolved_options: ResolvedTaskOptions(
          cwd: "<redacted>/packages/a",
          cache_config: Some(CacheConfig(
            env_config: EnvConfig(
              fingerprinted_envs: [],
              pass_through_envs: [
                "HOME",
                "USER",
                "TZ",
                "LANG",
                "SHELL",
                "PWD",
                "PATH",
                "CI",
                "NODE_OPTIONS",
                "COREPACK_HOME",
                "NPM_CONFIG_STORE_DIR",
                "PNPM_HOME",
                "LD_LIBRARY_PATH",
                "DYLD_FALLBACK_LIBRARY_PATH",
                "LIBPATH",
                "COLORTERM",
                "TERM",
                "TERM_PROGRAM",
                "DISPLAY",
                "FORCE_COLOR",
                "NO_COLOR",
                "TMP",
                "TEMP",
                "VERCEL",
                "VERCEL_*",
                "NEXT_*",
                "USE_OUTPUT_FOR_EDGE_FUNCTIONS",
                "NOW_BUILDER",
                "APPDATA",
                "PROGRAMDATA",
                "SYSTEMROOT",
                "SYSTEMDRIVE",
                "USERPROFILE",
                "HOMEDRIVE",
                "HOMEPATH",
                "ELECTRON_RUN_AS_NODE",
                "JB_INTERPRETER",
                "_JETBRAINS_TEST_RUNNER_RUN_SCOPE_TYPE",
                "JB_IDE_*",
                "VSCODE_*",
                "DOCKER_*",
                "BUILDKIT_*",
                "COMPOSE_*",
                "*_TOKEN",
              ],
            ),
          )),
        ),
      ),
    ),
    neighbors: {
      ("<redacted>/packages/b", "build"): Both,
    },
  ),
  ("<redacted>/packages/b", "build"): DiGraphValue(
    node: TaskNode(
      task_display: TaskDisplay(
        package_name: "@test/b",
        task_name: "build",
        package_path: "<redacted>/packages/b",
      ),
      resolved_config: ResolvedTaskConfig(
        command: "build b",
        resolved_options: ResolvedTaskOptions(
          cwd: "<redacted>/packages/b",
          cache_config: Some(CacheConfig(
            env_config: EnvConfig(
              fingerprinted_envs: [],
              pass_through_envs: [
                "HOME",
                "USER",
                "TZ",
                "LANG",
                "SHELL",
                "PWD",
                "PATH",
                "CI",
                "NODE_OPTIONS",
                "COREPACK_HOME",
                "NPM_CONFIG_STORE_DIR",
                "PNPM_HOME",
                "LD_LIBRARY_PATH",
                "DYLD_FALLBACK_LIBRARY_PATH",
                "LIBPATH",
                "COLORTERM",
                "TERM",
                "TERM_PROGRAM",
                "DISPLAY",
                "FORCE_COLOR",
                "NO_COLOR",
                "TMP",
                "TEMP",
                "VERCEL",
                "VERCEL_*",
                "NEXT_*",
                "USE_OUTPUT_FOR_EDGE_FUNCTIONS",
                "NOW_BUILDER",
                "APPDATA",
                "PROGRAMDATA",
                "SYSTEMROOT",
                "SYSTEMDRIVE",
                "USERPROFILE",
                "HOMEDRIVE",
                "HOMEPATH",
                "ELECTRON_RUN_AS_NODE",
                "JB_INTERPRETER",
                "_JETBRAINS_TEST_RUNNER_RUN_SCOPE_TYPE",
                "JB_IDE_*",
                "VSCODE_*",
                "DOCKER_*",
                "BUILDKIT_*",
                "COMPOSE_*",
                "*_TOKEN",
              ],
            ),
          )),
        ),
      ),
    ),
    neighbors: {},
  ),
}
