crates/vite_task_bin/tests/snapshots/snapshots__task graph@empty-package-test.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task_bin/tests/fixtures/empty-package-test
---
[
  {
    "id": {
      "package_dir": "<redacted>/packages/another-empty",
      "task_name": "build"
    },
    "command": "echo 'Building another-empty package'",
    "cwd": "<redacted>/packages/another-empty",
    "depends_on": [
      [
        {
          "package_dir": "<redacted>/packages/another-empty",
          "task_name": "lint"
        },
        "Explicit"
      ],
      [
        {
          "package_dir": "<redacted>/packages/normal-package",
          "task_name": "build"
        },
        "Topological"
      ],
      [
        {
          "package_dir": "<redacted>/packages/normal-package",
          "task_name": "test"
        },
        "Explicit"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/another-empty",
      "task_name": "deploy"
    },
    "command": "echo 'Deploying another-empty package'",
    "cwd": "<redacted>/packages/another-empty",
    "depends_on": [
      [
        {
          "package_dir": "<redacted>/packages/another-empty",
          "task_name": "build"
        },
        "Explicit"
      ],
      [
        {
          "package_dir": "<redacted>/packages/another-empty",
          "task_name": "test"
        },
        "Explicit"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/another-empty",
      "task_name": "lint"
    },
    "command": "echo 'Linting another-empty package'",
    "cwd": "<redacted>/packages/another-empty",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/another-empty",
      "task_name": "test"
    },
    "command": "echo 'Testing another-empty package'",
    "cwd": "<redacted>/packages/another-empty",
    "depends_on": [
      [
        {
          "package_dir": "<redacted>/packages/normal-package",
          "task_name": "test"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/empty-name",
      "task_name": "build"
    },
    "command": "echo 'Building empty-name package'",
    "cwd": "<redacted>/packages/empty-name",
    "depends_on": [
      [
        {
          "package_dir": "<redacted>/packages/empty-name",
          "task_name": "test"
        },
        "Explicit"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/empty-name",
      "task_name": "lint"
    },
    "command": "echo 'Linting empty-name package'",
    "cwd": "<redacted>/packages/empty-name",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/empty-name",
      "task_name": "test"
    },
    "command": "echo 'Testing empty-name package'",
    "cwd": "<redacted>/packages/empty-name",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/normal-package",
      "task_name": "build"
    },
    "command": "echo 'Building normal-package'",
    "cwd": "<redacted>/packages/normal-package",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "<redacted>/packages/normal-package",
      "task_name": "test"
    },
    "command": "echo 'Testing normal-package'",
    "cwd": "<redacted>/packages/normal-package",
    "depends_on": []
  }
]
